<resources>
    <string name="app_name">NasaIntegrationApp</string>
    <string name="photo_of_the_day_stub">Фото дня :)</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="imageDesc">Картинка</string>
    <string name="error">Ошибка</string>
    <string name="reload">Повторить</string>
    <string name="swap_theme">Сменить тему</string>
    <string name="theme1">Тема 1</string>
    <string name="theme2">Тема 2</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="system">Система планет</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="header">Заголовок</string>
    <string name="page_main">Главная</string>
    <string name="page_marsohod">Марс</string>
    <string name="page_recycler_view">Ресайклер вью</string>
    <string name="page_spans">Пример1</string>
    <string name="page_epic_earth">Земля</string>
    <string name="page_animations_rotate_fab">Пример2</string>
    <string name="photo_of_mars">Фото марса</string>
    <string name="photo_mars_info">Информация о снимке</string>
    <string name="photo_mars_camera_name">Название камеры: </string>
    <string name="photo_mars_camera_full_name">Полное название камеры: </string>
    <string name="photo_mars_rover_info">Информация о марсоходе</string>
    <string name="photo_mars_rover_name">"Название марсохода: "</string>
    <string name="photo_mars_landing_date">"Дата высадки: "</string>
    <string name="photo_mars_status_rover">"Статус аппарата: "</string>
    <string name="link_to_video_text">Уууупс. Кажется это видео. Вы можете просмотреть его, нажав на кнопку ниже</string>
    <string name="btn_link_to_video">Смотреть</string>
    <string name="fish_text">\"Material is the metaphor.\n\n\"          \"A material metaphor is the unifying theory of a rationalized space and a system of motion.\"         \"The material is grounded in tactile reality, inspired by the study of paper and ink, yet \"         \"technologically advanced and open to imagination and magic.\n\"         \"Surfaces and edges of the material provide visual cues that are grounded in reality. The \"         \"use of familiar tactile attributes helps users quickly understand affordances. Yet the \"         \"flexibility of the material creates new affordances that supercede those in the physical \"         \"world, without breaking the rules of physics.\n\"         \"The fundamentals of light, surface, and movement are key to conveying how objects move, \"         \"interact, and exist in space and in relation to each other. Realistic lighting shows \"         \"seams, divides space, and indicates moving parts.\n\n\"          \"Bold, graphic, intentional.\n\n\"          \"The foundational elements of print based design typography, grids, space, scale, color, \"         \"and use of imagery guide visual treatments. These elements do far more than please the \"         \"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge \"         \"imagery, large scale typography, and intentional white space create a bold and graphic \"         \"interface that immerse the user in the experience.\n\"         \"An emphasis on user actions makes core functionality immediately apparent and provides \"         \"waypoints for the user.\n\n\"          \"Motion provides meaning.\n\n\"          \"Motion respects and reinforces the user as the prime mover. Primary user actions are \"         \"inflection points that initiate motion, transforming the whole design.\n\"         \"All action takes place in a single environment. Objects are presented to the user without \"         \"breaking the continuity of experience even as they transform and reorganize.\n\"         \"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. \"         \"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n\"          \"3D world.\n\n\"          \"The material environment is a 3D space, which means all objects have x, y, and z \"         \"dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the \"         \"positive z-axis extending towards the viewer. Every sheet of material occupies a single \"         \"position along the z-axis and has a standard 1dp thickness.\n\"         \"On the web, the z-axis is used for layering and not for perspective. The 3D world is \"         \"emulated by manipulating the y-axis.\n\n\"          \"Light and shadow.\n\n\"          \"Within the material environment, virtual lights illuminate the scene. Key lights create \"         \"directional shadows, while ambient light creates soft shadows from all angles.\n\"         \"Shadows in the material environment are cast by these two light sources. In Android \"         \"development, shadows occur when light sources are blocked by sheets of material at \"         \"various positions along the z-axis. On the web, shadows are depicted by manipulating the \"         \"y-axis only. The following example shows the card with a height of 6dp.\n\n\"          \"Resting elevation.\n\n\"          \"All material objects, regardless of size, have a resting elevation, or default elevation \"         \"that does not change. If an object changes elevation, it should return to its resting \"         \"elevation as soon as possible.\n\n\"          \"Component elevations.\n\n\"          \"The resting elevation for a component type is consistent across apps (e.g., FAB elevation \"         \"does not vary from 6dp in one app to 16dp in another app).\n\"         \"Components may have different resting elevations across platforms, depending on the depth \"         \"of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n\"          \"Responsive elevation and dynamic elevation offsets.\n\n\"          \"Some component types have responsive elevation, meaning they change elevation in response \"         \"to user input (e.g., normal, focused, and pressed) or system events. These elevation \"         \"changes are consistently implemented using dynamic elevation offsets.\n\"         \"Dynamic elevation offsets are the goal elevation that a component moves towards, relative \"         \"to the component’s resting state. They ensure that elevation changes are consistent \"         \"across actions and component types. For example, all components that lift on press have \"         \"the same elevation change relative to their resting elevation.\n\"         \"Once the input event is completed or cancelled, the component will return to its resting \"         \"elevation.\n\n\"          \"Avoiding elevation interference.\n\n\"          \"Components with responsive elevations may encounter other components as they move between \"         \"their resting elevations and dynamic elevation offsets. Because material cannot pass \"         \"through other material, components avoid interfering with one another any number of ways, \"         \"whether on a per component basis or using the entire app layout.\n\"         \"On a component level, components can move or be removed before they cause interference. \"         \"For example, a floating action button (FAB) can disappear or move off screen before a \"         \"user picks up a card, or it can move if a snackbar appears.\n\"         \"On the layout level, design your app layout to minimize opportunities for interference. \"         \"For example, position the FAB to one side of stream of a cards so the FAB won’t interfere \"         \"when a user tries to pick up one of cards.\n\n\"</string>
    <string name="example_menu_item1">Пункт меню 1</string>
    <string name="example_menu_item2">Пункт меню 2</string>
    <string name="mars_description">
        Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы.
        Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу.
        Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого
        ей минералом маггемитом (оксидом железа).
    </string>
    <string name="span_fish_text">
        In their quest to improve the quality of life, they note that the high-tech concept of social order, as well as a fresh look at familiar things, certainly opens up new horizons for the analysis of repetitive behavior patterns.\nBy the way, the features of domestic policy are proportionally distributed by industry.\nWithin the framework of modern studies replicated by statistical data, modern studies cover samples among selected populations.\nUndoubtedly, the constant growth and scope of our activities creates the prerequisites for new proposals.\nthe choice of behavior patterns, the high quality of positional research, as well as a natural look at the usual horizons of things - of course, opens up new opportunities for choice in development.\nOur cause is not as straightforward as the results may be: modern development methodology requires the relevance of the study of development. Thus, the internal structure is strengthened and developed, forming a circle (specialists) participation in experiments that are striking in their scale and occurrence. Here is a practical example of modern management - a high-tech concept of social organization directly depends on the progress of the professional community. But the main shareholders of the companies only add to the factional divisions and appoint as contenders for participation in the elections.\nEqual, synthetic measurement of physiological processes and regulation of the state.
        In their quest to improve the quality of life, they note that the high-tech concept of social order, as well as a fresh look at familiar things, certainly opens up new horizons for the analysis of repetitive behavior patterns.\nBy the way, the features of domestic policy are proportionally distributed by industry.\nWithin the framework of modern studies replicated by statistical data, modern studies cover samples among selected populations.\nUndoubtedly, the constant growth and scope of our activities creates the prerequisites for new proposals.\nthe choice of behavior patterns, the high quality of positional research, as well as a natural look at the usual horizons of things - of course, opens up new opportunities for choice in development.\nOur cause is not as straightforward as the results may be: modern development methodology requires the relevance of the study of development. Thus, the internal structure is strengthened and developed, forming a circle (specialists) participation in experiments that are striking in their scale and occurrence. Here is a practical example of modern management - a high-tech concept of social organization directly depends on the progress of the professional community. But the main shareholders of the companies only add to the factional divisions and appoint as contenders for participation in the elections.\nEqual, synthetic measurement of physiological processes and regulation of the state.
    </string>
    <string name="ux_text_title">Заголовок</string>
    <string name="ux_text_description">Основной текст</string>
    <string name="ux_text_smaller">Текст, который не должнен бросаться в глаза</string>
    <string name="ux_button_primary">Важная кнопка</string>
    <string name="ux_button_detail">Кнопка с инфой</string>
    <string name="ux_button_bad">Нежелательная кнопка</string>
</resources>