<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_view_main"
        android:icon="@drawable/ic_space_main"
        app:tooltipText="Астрономисческая картинка дня"
        android:enabled="true"
        android:title="@string/page_main" />

    <item
        android:id="@+id/bottom_view_marsohod"
        android:icon="@drawable/ic_space_mars_photo_alien"
        app:tooltipText="Фотографии марсохода"
        android:enabled="true"
        android:title="@string/page_marsohod" />

    <item
        android:id="@+id/bottom_view_recycler_view"
        android:icon="@drawable/ic_space_telescope"
        app:tooltipText="Пример работы RecyclerView"
        android:enabled="true"
        android:title="@string/page_recycler_view" />

    <item
        android:id="@+id/bottom_view_animations_constraint_set"
        android:icon="@drawable/ic_space_comet"
        app:tooltipText=""
        android:enabled="true"
        android:title="@string/page_animations_constraint_set" />

    <item
        android:id="@+id/bottom_view_animations_rotate_fab"
        android:icon="@drawable/ic_space_weather"
        app:tooltipText=""
        android:enabled="true"
        android:title="@string/page_animations_rotate_fab" />

</menu>